# photo-farm

./: Cargo.toml  README.md
releases/windows/: photo-farm-0.1.0-x86_64.msi
src/: db.rs  disk.rs  draw.rs  images.rs  main.rs  metadata.rs
wix/: License.rtf  main.wxs
